--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   </head>
   <body>
     <h1>AI Poem Generator</h1>
+    <footer>
+      Coded by
+      <a href="https://github.com/SpectreKitty" target="_blank"> Astry Brana </a
+      >, open sourced on
+      <a href="https://github.com/SpectreKitty/AI-Project" target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://aiprojectbyastry.netlify.app/" target="_blank">
+        Netlify</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
