--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
     <style></style>
   </head>
   <body>
-    <h1>AI Poem Generator</h1>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem here"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will go here
+        <br />
+        The poem will go here
+      </div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/SpectreKitty" target="_blank"> Astry Brana</a
