--- a/index.html
+++ b/index.html
@@ -9,38 +9,42 @@
     <style></style>
   </head>
   <body>
-    <header>
-      <h1>AI Poem Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the poem here"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The poem will go here
-        <br />
-        The poem will go here
-      </div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/SpectreKitty" target="_blank"> Astry Brana</a
-      >, open sourced on
-      <a href="https://github.com/SpectreKitty/AI-Project" target="_blank"
-        >GitHub</a
-      >
-      and hosted on
-      <a href="https://aiprojectbyastry.netlify.app/" target="_blank">
-        Netlify</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h1>AI Poem Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the poem here"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will go here
+          <br />
+          The poem will go here
+        </div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/SpectreKitty" target="_blank">
+          Astry Brana</a
+        >, open sourced on
+        <a href="https://github.com/SpectreKitty/AI-Project" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://aiprojectbyastry.netlify.app/" target="_blank">
+          Netlify</a
+        >
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
